@@ -369,7 +369,7 @@ public final class SlicingAbstractionsUtils {
       ARGState start, ARGState stop, List<ARGState> segmentList, PathFormulaManager pPfmgr) {
     final Map<ARGState, PathFormulaBuilder> finishedBuilders = new TreeMap<>();
     List<ARGState> allList = new ArrayList<>(segmentList);
-    allList.add(0, start);
+    allList.addFirst(start);
     allList.add(stop);
 
     for (ARGState currentState : allList) {
@@ -483,7 +483,7 @@ public final class SlicingAbstractionsUtils {
     PathFormula currentPathFormula =
         buildPathFormula(
             pRoot,
-            pPath.get(0),
+            pPath.getFirst(),
             pSSAMap,
             pPts,
             pSolver.getFormulaManager(),
@@ -630,7 +630,7 @@ public final class SlicingAbstractionsUtils {
     ARGState root = rootStates.iterator().next();
     final List<ARGState> abstractionStatesTrace =
         PredicateCPARefiner.filterAbstractionStates(pErrorPath);
-    assert abstractionStatesTrace.get(0).getStateId() != 0;
+    assert abstractionStatesTrace.getFirst().getStateId() != 0;
     for (int i = -1; i < abstractionStatesTrace.size() - 1; i++) {
       ARGState first = (i == -1) ? root : abstractionStatesTrace.get(i);
       ARGState second = abstractionStatesTrace.get(i + 1);
