@@ -256,7 +256,7 @@ public class BuiltinOverflowFunctions {
         List<CExpression> parameters = functionCallExpression.getParameterExpressions();
         if (parameters.size() == 3) {
           Value firstParameterValue =
-              evv.evaluate(parameters.get(0), parameters.get(0).getExpressionType());
+              evv.evaluate(parameters.getFirst(), parameters.getFirst().getExpressionType());
           Value secondParameterValue =
               evv.evaluate(parameters.get(1), parameters.get(1).getExpressionType());
           CSimpleType resultType = getTargetType(nameOfCalledFunc, parameters.get(2));
